docs/api/qiskit/0.37/qiskit.providers.fake_provider.ConfigurableFakeBackend.mdx
---
title: ConfigurableFakeBackend (v0.37)
description: API reference for qiskit.providers.fake_provider.ConfigurableFakeBackend in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.ConfigurableFakeBackend
---

# ConfigurableFakeBackend

<Class id="qiskit.providers.fake_provider.ConfigurableFakeBackend" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/providers/fake_provider/utils/configurable_backend.py" signature="ConfigurableFakeBackend(name, n_qubits, version=None, coupling_map=None, basis_gates=None, qubit_t1=None, qubit_t2=None, qubit_frequency=None, qubit_readout_error=None, single_qubit_gates=None, dt=None, std=None, seed=None)" modifiers="class">
  Bases: `qiskit.providers.fake_provider.fake_backend.FakeBackend`

  Configurable backend.

  Creates backend based on provided configuration.

  **Parameters**

  *   **name** (`str`) – Name of the backend.
  *   **n\_qubits** (`int`) – Number of qubits in the backend.
  *   **version** (`Optional`\[`str`]) – Version of the fake backend.
  *   **coupling\_map** (`Optional`\[`List`\[`List`\[`int`]]]) – Coupling map.
  *   **basis\_gates** (`Optional`\[`List`\[`str`]]) – Basis gates of the backend.
  *   **qubit\_t1** (`Union`\[`float`, `List`\[`float`], `None`]) – Longitudinal coherence times.
  *   **qubit\_t2** (`Union`\[`float`, `List`\[`float`], `None`]) – Transverse coherence times.
  *   **qubit\_frequency** (`Union`\[`float`, `List`\[`float`], `None`]) – Frequency of qubits.
  *   **qubit\_readout\_error** (`Union`\[`float`, `List`\[`float`], `None`]) – Readout error of qubits.
  *   **single\_qubit\_gates** (`Optional`\[`List`\[`str`]]) – List of single qubit gates for backend properties.
  *   **dt** (`Optional`\[`float`]) – Discretization of the input time sequences.
  *   **std** (`Optional`\[`float`]) – Standard deviation of the generated distributions.
  *   **seed** (`Optional`\[`int`]) – Random seed.

  ## Methods

  <span id="qiskit-providers-fake-provider-configurablefakebackend-configuration" />

  ### configuration

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.configuration" signature="ConfigurableFakeBackend.configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  <span id="qiskit-providers-fake-provider-configurablefakebackend-defaults" />

  ### defaults

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.defaults" signature="ConfigurableFakeBackend.defaults()">
    Return backend defaults.
  </Function>

  <span id="qiskit-providers-fake-provider-configurablefakebackend-name" />

  ### name

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.name" signature="ConfigurableFakeBackend.name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    str
  </Function>

  <span id="qiskit-providers-fake-provider-configurablefakebackend-properties" />

  ### properties

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.properties" signature="ConfigurableFakeBackend.properties()">
    Return backend properties
  </Function>

  <span id="qiskit-providers-fake-provider-configurablefakebackend-provider" />

  ### provider

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.provider" signature="ConfigurableFakeBackend.provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Function>

  <span id="qiskit-providers-fake-provider-configurablefakebackend-run" />

  ### run

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.run" signature="ConfigurableFakeBackend.run(run_input, **kwargs)">
    Main job in simulator
  </Function>

  <span id="qiskit-providers-fake-provider-configurablefakebackend-set-options" />

  ### set\_options

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.set_options" signature="ConfigurableFakeBackend.set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    **AttributeError** – If the field passed in is not part of the options
  </Function>

  <span id="qiskit-providers-fake-provider-configurablefakebackend-status" />

  ### status

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.status" signature="ConfigurableFakeBackend.status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>

  ## Attributes

  ### options

  <Attribute id="qiskit.providers.fake_provider.ConfigurableFakeBackend.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](qiskit.providers.fake_provider.ConfigurableFakeBackend#run "qiskit.providers.fake_provider.ConfigurableFakeBackend.run") method.
  </Attribute>

  ### version

  <Attribute id="qiskit.providers.fake_provider.ConfigurableFakeBackend.version" attributeValue="1" />
</Class>

