docs/api/qiskit/0.46/qiskit.providers.fake_provider.ConfigurableFakeBackend.mdx
---
title: ConfigurableFakeBackend
description: API reference for qiskit.providers.fake_provider.ConfigurableFakeBackend
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.ConfigurableFakeBackend
---

# ConfigurableFakeBackend

<Class id="qiskit.providers.fake_provider.ConfigurableFakeBackend" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.46/qiskit/providers/fake_provider/utils/configurable_backend.py" signature="qiskit.providers.fake_provider.ConfigurableFakeBackend(name, n_qubits, version=None, coupling_map=None, basis_gates=None, qubit_t1=None, qubit_t2=None, qubit_frequency=None, qubit_readout_error=None, single_qubit_gates=None, dt=None, std=None, seed=None)">
  Bases: [`FakeBackend`](providers_fake_provider#qiskit.providers.fake_provider.FakeBackend "qiskit.providers.fake_provider.fake_backend.FakeBackend")

  Configurable backend.

  Creates backend based on provided configuration.

  <Admonition title="Deprecated since version 0.46.0" type="danger">
    The class `qiskit.providers.fake_provider.utils.configurable_backend.ConfigurableFakeBackend` is deprecated as of qiskit 0.46.0. It will be removed in qiskit 1.0. Use a suitable FakeBackend instead.
  </Admonition>

  **Parameters**

  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – Name of the backend.
  *   **n\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – Number of qubits in the backend.
  *   **version** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – Version of the fake backend.
  *   **coupling\_map** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")*]] | None*) – Coupling map.
  *   **basis\_gates** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")*] | None*) – Basis gates of the backend.
  *   **qubit\_t1** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")  *|*[*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")*] | None*) – Longitudinal coherence times.
  *   **qubit\_t2** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")  *|*[*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")*] | None*) – Transverse coherence times.
  *   **qubit\_frequency** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")  *|*[*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")*] | None*) – Frequency of qubits.
  *   **qubit\_readout\_error** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")  *|*[*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")*] | None*) – Readout error of qubits.
  *   **single\_qubit\_gates** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.12)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")*] | None*) – List of single qubit gates for backend properties.
  *   **dt** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)") *| None*) – Discretization of the input time sequences.
  *   **std** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)") *| None*) – Standard deviation of the generated distributions.
  *   **seed** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)") *| None*) – Random seed.

  ## Attributes

  ### options

  <Attribute id="qiskit.providers.fake_provider.ConfigurableFakeBackend.options" name="options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](#qiskit.providers.fake_provider.ConfigurableFakeBackend.run "qiskit.providers.fake_provider.ConfigurableFakeBackend.run") method.
  </Attribute>

  ### version

  <Attribute id="qiskit.providers.fake_provider.ConfigurableFakeBackend.version" name="version" attributeValue="= 1" />

  ## Methods

  ### configuration

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.configuration" name="configuration" signature="configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  ### defaults

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.defaults" name="defaults" signature="defaults()">
    Return backend defaults.
  </Function>

  ### name

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.name" name="name" signature="name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")
  </Function>

  ### properties

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.properties" name="properties" signature="properties()">
    Return backend properties
  </Function>

  ### provider

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.provider" name="provider" signature="provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Function>

  ### run

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.run" name="run" signature="run(run_input, **kwargs)">
    Main job in simulator
  </Function>

  ### set\_options

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.set_options" name="set_options" signature="set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.12)") – If the field passed in is not part of the options
  </Function>

  ### status

  <Function id="qiskit.providers.fake_provider.ConfigurableFakeBackend.status" name="status" signature="status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>
</Class>

